# template-python-fastapi

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  azure-pipelines.yml  docker-compose.yml  pyproject.toml  pytest.ini  sonar-project.properties
env/: azure.env
manifests/base/: deployment.yml  hpa.yml  kustomization.yml  service.yml  virtual-service.yml
manifests/overlays/dev/: kustomization.yml
manifests/overlays/test/: kustomization.yml
precommit/: validate_branch_name.sh
sql-test-docker/: init.sql
src/adapter/controllers/: __init__.py  person_controller.py
src/adapter/dtos/: __init__.py  person_dto.py  structure_response.py
src/conf/: __init__.py  containers.py
src/domain/exceptions/: __init__.py  errorcode.py  exceptions.py
src/domain/models/: person.py
src/domain/repositories/: __init__.py  person_repository.py
src/infrastructure/api/: main.py
src/infrastructure/api/middleware/: __init__.py  common_middleware.py  error_middleware.py  verification_db.py
src/infrastructure/api/routers/: example_person_router.py  index.py
src/infrastructure/database/postgresql/: __init__.py  postgresql.py  postgresqldb.py
src/infrastructure/database/postgresql/adapter/: __init__.py  connection_config.py
src/infrastructure/database/postgresql/dao/: __init__.py  person_dao.py
src/infrastructure/database/postgresql/utils/: __init__.py  db_utils.py
src/usecases/: __init__.py  person_info.py
src/util/: __init__.py  buffer.py  enviroments.py
tests/: conftest.py
tests/config/database/dao/: __init__.py  generic_dao_test.py  person_dao_test.py
tests/config/mocks/informacion_db/: __init__.py  user_person_data_db.py
tests/config/mocks/tablas/: __init__.py  testdb.py
tests/infraestructure/api/: person_test.py
